--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.2.4",
-    "ejs": "*",
-    "stylus": "*",
-    "mongoose": "3.8.3",
     "connect-flash": "*",
+    "ejs": "*",
+    "express": "3.2.4",
+    "formidable": "^1.1.1",
+    "mongoose": "3.8.3",
     "passport": "0.1.17",
-    "passport-local": "*"
+    "passport-local": "*",
+    "stylus": "*"
   }
 }
